[tool.poetry]
name = "deep-learning-course"
version = "0.1.0"
description = "Machine Learning Course"
authors = ["Maruf Bepary <bepary71@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyterhub = "^4.0.2"
jupyter = "^1.0.0"
numpy = "^1.26.1"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
scipy = "^1.14.0"
apyori = "^1.1.2"
nltk = "^3.8.1"
tensorflow = "^2.16.2"
keras = "^3.4.1"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
torch = "^2.3.1"
imageio = "^2.34.2"
gym = "^0.26.2"
torchvision = "^0.18.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
